# autofile

./: .pylintrc  README.md  environment.yml  file1.txt  file2.txt  lint.sh  meta.yaml  pyproject.toml  recipe.yaml  setup.py
.circleci/: .config.yml.swp  config.yml  config.yml~
.github/workflows/: install.yml  test.yaml
.recipe/: recipe.yaml
autofile/: __init__.py  _conv.py  _safemode.py  fs.py  io_.py  json_.py  model.py  out  test_.py
autofile/data_types/: __init__.py  name.py  sread.py  swrite.py  test_.py
autofile/file/: __init__.py  read.py  test_.py  write.py
autofile/info/: _info.py  _inspect.py
autofile/schema/: __init__.py  _util.py  data_files.py  data_series.py  info_objects.py  json_objects.py  loc_maps.py  spec_maps.py  test_.py  test_data_files.py  test_data_series.py
autofile/system/: __init__.py  (+7 more)
docs/: api.rst  conf.py  docs.rst  index.rst  submodule_data_types.rst  submodule_file.rst  submodule_fs.rst  submodule_info.rst  submodule_io.rst  submodule_json.rst  submodule_model.rst  submodule_schema.rst  tutorial.rst
scripts/: 2fail.day  alt_try_ts_zmatrix_code.py  atest.py  build_ts_inf.py  clean.py  examples.py  fail.py  fail2.py  fix_ts.py  freqs.py  insert_sym_layer.py  insert_zmatrix_layer.py  json_conversion  move_data.py  out2  out3  out4  out5  out6  rct_gra  rewrite_traj_files.py  rtest  rtest2  rxn_chk.py  rxn_obj.py  safemode_demo.py  tmp.zmat  tors.py  trans.py  try_ts_zmatrix_code.py  try_x2z_ts_zmatrix_code.py  try_zmatrix_code.py  tsfails.py  tsfails_orig.py  tsfails_red.py  tsfile.py  wipe_old_cscan_directories.py  yaml
(+409 files in other folders)
